--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
 		"test": "test"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --runInBand",
+		"test:watch": "jest --runInBand --watch",
 		"migrate:dev": "npx prisma migrate dev --preview-feature",
-		"migrate:apply": "npx prisma migrate deploy --preview-feature"
+		"migrate:apply": "npx prisma migrate deploy --preview-feature",
+		"start": "NODE_ENV=production node app.js",
+		"start:dev": "nodemon app.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"@prisma/client": "^2.13.1",
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"http-errors": "^1.8.0"
 	},
 	"devDependencies": {
 		"@prisma/cli": "^2.13.1",
+		"dotenv": "^8.2.0",
 		"jest": "^26.6.3",
+		"nanoid": "^3.1.20",
 		"pg": "^8.5.1",
 		"supertest": "^6.0.1"
 	}
